# SoundPalette

./: .gitignore  Cargo.toml  README.md  make-release.sh
htdocs/: SoundPalette.d  SoundPalette.wasm  index.html  libSoundPalette.d  libSoundPalette.wasm
src/: lib.rs  main.rs  midi.rs  sysex.rs  ui.rs  wasm_ffi.rs
src/sysex/: roland.rs  universal.rs
src/sysex/roland/: maps.rs
src/sysex/roland/maps/: gs.rs  sc_55.rs  sc_7.rs
