# Part of SoundPalette by hikari_no_yume.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
[package]
name = "SoundPalette"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib is for use by browser JS as WebAssembly, rlib is for the Rust CLI app
crate-type = ["cdylib", "rlib"]
name = "libSoundPalette"

[[bin]]
name = "SoundPalette"
